--- a/service/templates/cars.html
+++ b/service/templates/cars.html
@@ -5,56 +5,50 @@
 {% block title %}{% trans "Cars" %}{% endblock %}
 
 {% block content %}
-<h2>{% trans "Cars" %}</h2>
-<br>
-<h5>{% trans "Cars registered in our auto service" %}:</h5>
-<br>
-{% if cars %}
+  <h2>{% trans "Cars" %}</h2>
+  <br>
+  <h5>{% trans "Cars registered in our auto service" %}:</h5>
+  <br>
+  {% if cars %}
     <div class="row">
-        {% for car in cars %}
-            <div class="col-md-4 d-flex align-items-stretch">
-                <div class="card mb-4 shadow-sm">
-                    <img src="{{ car.photo.url }}" class="card-img-top" alt="{% trans 'car-photo' %}">
-                    <div class="card-body">
-                        <p class="card-text">
-                            <a href="{{ car.id }}">
-                                {{ car.car_model.make }} {{ car.car_model.model }} ({{ car.car_model.year }})
-                            </a>
-                        </p>
-                        <h6 class="card-subtitle mb-2 text-muted"></h6>
-                        <h6 class="card-subtitle mb-2 text-muted">
-                            {{ car.car_model.engine_type }}, {{ car.car_model.fuel_type }}
-                        </h6>
-                        <h6 class="card-subtitle mb-2 text-muted"></h6>
-                        <br>
-                        <h6 class="card-subtitle mb-2 text-muted">{{ car.license_plate_no }}</h6>
-                        <h6 class="card-subtitle mb-2 text-muted">{{ car.vin_code }}</h6>
-                        <h6 class="card-subtitle mb-2 text-muted">{{ car.client_name }}</h6>
-                    </div>
-                </div>
+      {% for car in cars %}
+        <div class="col-md-4 d-flex align-items-stretch">
+          <div class="card mb-4 shadow-sm">
+            <img src="{{ car.photo.url }}" class="card-img-top" alt="{% trans 'car-photo' %}">
+            <div class="card-body">
+              <p class="card-text">
+                <a href="{{ car.id }}">{{ car.car_model.make }} {{ car.car_model.model }} ({{ car.car_model.year }})</a>
+              </p>
+              <h6 class="card-subtitle mb-2 text-muted"></h6>
+              <h6 class="card-subtitle mb-2 text-muted">
+                {{ car.car_model.engine_type }}, {{ car.car_model.fuel_type }}
+              </h6>
+              <h6 class="card-subtitle mb-2 text-muted"></h6>
+              <br>
+              <h6 class="card-subtitle mb-2 text-muted">{{ car.license_plate_no }}</h6>
+              <h6 class="card-subtitle mb-2 text-muted">{{ car.vin_code }}</h6>
+              <h6 class="card-subtitle mb-2 text-muted">{{ car.client_name }}</h6>
             </div>
-        {% endfor %}
+          </div>
+        </div>
+      {% endfor %}
     </div>
-{% else %}
+  {% else %}
     <p>{% trans "There are no cars at the moment" %}.</p>
-{% endif %}
-<div class="container">
+  {% endif %}
+  <div class="container">
     <nav>
-        {% if cars.has_other_pages %}
-            <ul class="pagination pagination-sm justify-content-center">
-                {% for i in cars.paginator.page_range %}
-                    {% if cars.number == i %}
-                        <li class="page-item active">
-                            <a class="page-link">{{ i }}</a>
-                        </li>
-                    {% else %}
-                        <li class="page-item">
-                            <a class="page-link" href="?page={{ i }}">{{ i }}</a>
-                        </li>
-                    {% endif %}
-                {% endfor %}
-            </ul>
-        {% endif %}
+      {% if cars.has_other_pages %}
+        <ul class="pagination pagination-sm justify-content-center">
+          {% for i in cars.paginator.page_range %}
+            {% if cars.number == i %}
+              <li class="page-item active"><a class="page-link">{{ i }}</a></li>
+            {% else %}
+              <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
+            {% endif %}
+          {% endfor %}
+        </ul>
+      {% endif %}
     </nav>
-</div>
+  </div>
 {% endblock %}
