--- a/service/templates/order_details.html
+++ b/service/templates/order_details.html
@@ -4,97 +4,96 @@
 {% block title %}{% trans "Order Details" %}{% endblock %}
 
 {% block content %}
-<h2>{% trans "Order no" %} {{ order.id }}:</h2>
-<hr/>
-{% if order.user == user %}
+  <h2>{% trans "Order no" %} {{ order.id }}:</h2>
+  <hr>
+  {% if order.user == user %}
     <a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'order_update' order.id %}">{% trans "Edit order" %}</a>
     <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'order_delete' order.id %}">{% trans "Delete order" %}</a>
     <br>
     <br>
-{% endif %}
-<p><strong>{% trans "Status" %}: </strong>{{ order.get_status_display }}</p>
-<p><strong>{% trans "Date" %}: </strong>{{ order.date }}</p>
-<p><strong>{% trans "Return date" %}: </strong>{{ order.deadline }}</p>
-<p class="text-{% if order.is_overdue %}danger{% else %}success{% endif %}"><strong>{% trans "Is overdue" %}: </strong>
+  {% endif %}
+  <p><strong>{% trans "Status" %}: </strong>{{ order.get_status_display }}</p>
+  <p><strong>{% trans "Date" %}: </strong>{{ order.date }}</p>
+  <p><strong>{% trans "Return date" %}: </strong>{{ order.deadline }}</p>
+  <p class="text-{% if order.is_overdue %}danger{% else %}success{% endif %}">
+    <strong>{% trans "Is overdue" %}: </strong>
     {% if order.is_overdue %}{% trans "Yes" %}{% else %}{% trans "No" %}{% endif %}
-</p>
-<p><strong>{% trans "Client" %}: </strong>{{ order.car.client_name }}</p>
-<p><strong>{% trans "Car" %}: </strong><a href="{% url 'car_details' order.car.id %}">{{ order.car.car_model }}
+  </p>
+  <p><strong>{% trans "Client" %}: </strong>{{ order.car.client_name }}</p>
+  <p><strong>{% trans "Car" %}: </strong><a href="{% url 'car_details' order.car.id %}">{{ order.car.car_model }}
     ({{ order.car.license_plate_no }}, {{ order.car.vin_code }})</a></p>
-{% if order.lines.all %}
+  {% if order.lines.all %}
     <div class="container" style="display: inline-block; padding-top: 20px; padding-left: 20px; width: 80%">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>{% trans "Service" %}</th>
-                <th>{% trans "Item price" %}</th>
-                <th>{% trans "Quantity" %}</th>
-                <th>{% trans "Price" %}</th>
-                <th>{% trans "Actions" %}</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for line in order.lines.all %}
-                <tr>
-                    <td>{{ line.service.name }}</td>
-                    <td>{{ line.service.price }} €</td>
-                    <td>{{ line.quantity }}</td>
-                    <td>{{ line.price }} €</td>
-                    <td>
-                        {% if order.user == user %}
-                            <a class="btn btn-primary btn-sm mt-1 mb-1"
-                               href="{% url 'order_line_update' order.id line.id %}">{% trans "Edit" %}</a>
-                            <a class="btn btn-danger btn-sm mt-1 mb-1"
-                               href="{% url 'order_line_delete' order.id line.id %}">{% trans "Delete" %}</a>
-                        {% endif %}
-                    </td>
-                </tr>
-            {% endfor %}
-            <tr>
-                <td colspan="3"></td>
-                <td><strong>{{ order.total_price }} €</strong></td>
-                <td></td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-{% endif %}
-<br>
-{% if order.user == user %}
-    <a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'order_line_new' order.id %}">
-        {% trans "Add a service" %}
-    </a>
-{% endif %}
-<br>
-<br>
-{% if user.is_authenticated %}
-    <div class="fieldWrapper">
-        <hr>
-        <br>
-        <h4>{% trans "Leave a comment" %}:</h4>
-        <form action="" method="post">
-            {% csrf_token %}
-            {{ form.text }}
-            <br>
-            <br>
-            <input type="submit" class="btn btn-primary" value="{% trans 'Post' %}"/>
-        </form>
-    </div>
-{% endif %}
-<br>
-<br>
-<h3>{% trans "Comments" %}:</h3>
-<div class="container" style="display: inline-block; padding-top: 20px; padding-left: 20px; width: 80%">
-    {% if order.comments.all %}
-        {% for comment in order.comments.all %}
-            <img src="{{ comment.author.profile.picture.url }}" alt="{% trans 'profile-picture' %}"
-                 width="40" height="40">
-            <strong>{{ comment.author }}</strong>, <em>{{ comment.date }}</em>
-            <p>{{ comment.text }}</p>
-            <hr>
+      <table class="table table-striped">
+        <thead>
+        <tr>
+          <th>{% trans "Service" %}</th>
+          <th>{% trans "Item price" %}</th>
+          <th>{% trans "Quantity" %}</th>
+          <th>{% trans "Price" %}</th>
+          <th>{% trans "Actions" %}</th>
+        </tr>
+        </thead>
+        <tbody>
+        {% for line in order.lines.all %}
+          <tr>
+            <td>{{ line.service.name }}</td>
+            <td>{{ line.service.price }} €</td>
+            <td>{{ line.quantity }}</td>
+            <td>{{ line.price }} €</td>
+            <td>
+              {% if order.user == user %}
+                <a class="btn btn-primary btn-sm mt-1 mb-1"
+                   href="{% url 'order_line_update' order.id line.id %}">{% trans "Edit" %}</a>
+                <a class="btn btn-danger btn-sm mt-1 mb-1"
+                   href="{% url 'order_line_delete' order.id line.id %}">{% trans "Delete" %}</a>
+              {% endif %}
+            </td>
+          </tr>
         {% endfor %}
+        <tr>
+          <td colspan="3"></td>
+          <td><strong>{{ order.total_price }} €</strong></td>
+          <td></td>
+        </tr>
+        </tbody>
+      </table>
+    </div>
+  {% endif %}
+  <br>
+  {% if order.user == user %}
+    <a class="btn btn-primary btn-sm mt-1 mb-1" href="{% url 'order_line_new' order.id %}">
+      {% trans "Add a service" %}
+    </a>
+  {% endif %}
+  <br>
+  <br>
+  {% if user.is_authenticated %}
+    <div class="fieldWrapper">
+      <hr>
+      <br>
+      <h4>{% trans "Leave a comment" %}:</h4>
+      <form action="" method="post">
+        {% csrf_token %}
+        {{ form.text }}
+        <br>
+        <br>
+        <input type="submit" class="btn btn-primary" value="{% trans 'Post' %}"/>
+      </form>
+    </div>
+  {% endif %}
+  <br>
+  <br>
+  <h3>{% trans "Comments" %}:</h3>
+  <div class="container" style="display: inline-block; padding-top: 20px; padding-left: 20px; width: 80%">
+    {% if order.comments.all %}
+      {% for comment in order.comments.all %}
+        <img src="{{ comment.author.profile.picture.url }}" alt="{% trans 'profile-picture' %}" width="40" height="40">
+        <strong>{{ comment.author }}</strong>, <em>{{ comment.date }}</em><p>{{ comment.text }}</p>
+        <hr>
+      {% endfor %}
     {% else %}
-        <p>{% trans "There are no comments for this order" %}.</p>
+      <p>{% trans "There are no comments for this order" %}.</p>
     {% endif %}
-</div>
+  </div>
 {% endblock %}
