--- a/service/templates/orders.html
+++ b/service/templates/orders.html
@@ -4,72 +4,67 @@
 {% block title %}{% trans "Orders" %}{% endblock %}
 
 {% block content %}
-<h2>{% trans "Orders" %}</h2>
-<br>
-<h5>{% trans "All our orders" %}:</h5>
-<br>
-{% if orders %}
+  <h2>{% trans "Orders" %}</h2>
+  <br>
+  <h5>{% trans "All our orders" %}:</h5>
+  <br>
+  {% if orders %}
     <div class="row">
-        {% for order in orders %}
-            <div class="col-md-4 d-flex align-items-stretch">
-                <div class="card mb-4 shadow-sm">
-                    <img src="{{ order.user.profile.picture.url }}" class="card-img-top"
-                         alt="{% trans 'profile-picture' %}">
-                    <div class="card-body">
-                        <p class="card-text">
-                            <a href="{% url 'order_details' order.id %}">
-                                {{ order.car.car_model.make }} {{ order.car.car_model.model }}
-                                ({{ order.car.car_model.year }}), {{ order.total_price }} €
-                            </a>
-                            <br>
-                            <a href="{% url 'order_details' order.id %}">ID: {{ order.id }}</a>
-                        </p>
-                        <h6 class="card-subtitle mb-2 text-muted"></h6>
-                        <h6 class="card-subtitle mb-2 text-muted">
-                            {{ order.car.client_name }} ({{ order.user.username }})
-                        </h6>
-                        <h6 class="card-subtitle mb-2 text-muted"></h6>
-                        <br>
-                        <h6 class="card-subtitle mb-2 text-muted">{{ order.car.license_plate_no }}</h6>
-                        <h6 class="card-subtitle mb-2 text-muted">{{ order.car.vin_code }}</h6>
-                        <h6 class="card-subtitle mb-2 text-muted">
-                            {{ order.car.car_model.engine_type }}, {{ order.car.car_model.fuel_type }}
-                        </h6>
-                        <br>
-                        <h6 class="card-subtitle mb-2 text-muted"></h6>
-                        <h6 class="card-subtitle mb-2 text-muted">{% trans "From" %}: {{ order.date|date:"Y-m-d" }}</h6>
-                        <h6 class="card-subtitle mb-2 text-muted">{% trans "Until" %}:
-                            <span class="text-{% if order.is_overdue %}danger{% else %}success{% endif %}">
-                            {{ order.deadline|date:"Y-m-d, H:i" }}
-                        </span>
-                        </h6>
-                    </div>
-                </div>
+      {% for order in orders %}
+        <div class="col-md-4 d-flex align-items-stretch">
+          <div class="card mb-4 shadow-sm">
+            <img src="{{ order.user.profile.picture.url }}" class="card-img-top" alt="{% trans 'profile-picture' %}">
+            <div class="card-body">
+              <p class="card-text">
+                <a href="{% url 'order_details' order.id %}">
+                  {{ order.car.car_model.make }} {{ order.car.car_model.model }} ({{ order.car.car_model.year }}),
+                  {{ order.total_price }} €
+                </a>
+                <br>
+                <a href="{% url 'order_details' order.id %}">ID: {{ order.id }}</a>
+              </p>
+              <h6 class="card-subtitle mb-2 text-muted"></h6>
+              <h6 class="card-subtitle mb-2 text-muted">{{ order.car.client_name }} ({{ order.user.username }})</h6>
+              <h6 class="card-subtitle mb-2 text-muted"></h6>
+              <br>
+              <h6 class="card-subtitle mb-2 text-muted">{{ order.car.license_plate_no }}</h6>
+              <h6 class="card-subtitle mb-2 text-muted">{{ order.car.vin_code }}</h6>
+              <h6 class="card-subtitle mb-2 text-muted">
+                {{ order.car.car_model.engine_type }}, {{ order.car.car_model.fuel_type }}
+              </h6>
+              <br>
+              <h6 class="card-subtitle mb-2 text-muted"></h6>
+              <h6 class="card-subtitle mb-2 text-muted">{% trans "From" %}: {{ order.date|date:"Y-m-d" }}</h6>
+              <h6 class="card-subtitle mb-2 text-muted">{% trans "Until" %}:
+                <span class="text-{% if order.is_overdue %}danger{% else %}success{% endif %}">
+                  {{ order.deadline|date:"Y-m-d, H:i" }}
+                </span>
+              </h6>
             </div>
-        {% endfor %}
+          </div>
+        </div>
+      {% endfor %}
     </div>
-{% else %}
+  {% else %}
     <p>{% trans "There are no orders at the moment" %}.</p>
-{% endif %}
-<div class="container">
+  {% endif %}
+  <div class="container">
     <ul class="pagination pagination-sm justify-content-center">
-        {% if page_obj.has_previous %}
-            <li class="page-item">
-                <a href="?page=1" class="page-link">{% trans "First" %}</a>
-            </li>
-            <li class="page-item">
-                <a href="?page={{ page_obj.previous_page_number }}" class="page-link">{% trans "Previous" %}</a>
-            </li>
-        {% endif %}
-        <li class="page-link active">{{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</li>
-        {% if page_obj.has_next %}
-            <li class="page-item">
-                <a href="?page={{ page_obj.next_page_number }}" class="page-link">{% trans "Next" %}</a>
-            </li>
-            <li class="page-item">
-                <a href="?page={{ page_obj.paginator.num_pages }}" class="page-link">{% trans "Last" %}</a>
-            </li>
-        {% endif %}
+      {% if page_obj.has_previous %}
+        <li class="page-item"><a href="?page=1" class="page-link">{% trans "First" %}</a></li>
+        <li class="page-item">
+          <a href="?page={{ page_obj.previous_page_number }}" class="page-link">{% trans "Previous" %}</a>
+        </li>
+      {% endif %}
+      <li class="page-link active">{{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</li>
+      {% if page_obj.has_next %}
+        <li class="page-item">
+          <a href="?page={{ page_obj.next_page_number }}" class="page-link">{% trans "Next" %}</a>
+        </li>
+        <li class="page-item">
+          <a href="?page={{ page_obj.paginator.num_pages }}" class="page-link">{% trans "Last" %}</a>
+        </li>
+      {% endif %}
     </ul>
-</div>
+  </div>
 {% endblock %}
