--- a/service/templates/profile.html
+++ b/service/templates/profile.html
@@ -5,27 +5,26 @@
 {% block title %}{% trans "User Profile" %}{% endblock %}
 
 {% block content %}
-<div class="container" style="display: inline-block; width: 70%">
+  <div class="container" style="display: inline-block; width: 70%">
     <div class="content-section">
-        <div class="media">
-            <img class="rounded-circle account-img" src="{{ user.profile.picture.url }}"
-                 alt="{% trans 'profile-picture' %}">
-            <div class="media-body">
-                <h2 class="account-heading">{{ user.username }}</h2>
-                <p class="text-secondary">{{ user.email }}</p>
-            </div>
+      <div class="media">
+        <img class="rounded-circle account-img" src="{{ user.profile.picture.url }}"
+             alt="{% trans 'profile-picture' %}">
+        <div class="media-body">
+          <h2 class="account-heading">{{ user.username }}</h2><p class="text-secondary">{{ user.email }}</p>
         </div>
-        <form method="POST" enctype="multipart/form-data">
-            {% csrf_token %}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">{% trans "Profile info" %}</legend>
-                {{ user_form|crispy }}
-                {{ profile_form|crispy }}
-            </fieldset>
-            <div class="form-group">
-                <button class="btn btn-primary" type="submit">{% trans "Update" %}</button>
-            </div>
-        </form>
+      </div>
+      <form method="POST" enctype="multipart/form-data">
+        {% csrf_token %}
+        <fieldset class="form-group">
+          <legend class="border-bottom mb-4">{% trans "Profile info" %}</legend>
+          {{ user_form|crispy }}
+          {{ profile_form|crispy }}
+        </fieldset>
+        <div class="form-group">
+          <button class="btn btn-primary" type="submit">{% trans "Update" %}</button>
+        </div>
+      </form>
     </div>
-</div>
+  </div>
 {% endblock %}
