--- a/service/templates/services.html
+++ b/service/templates/services.html
@@ -16,18 +16,22 @@
     <p>{% trans "There are no services at the moment" %}.</p>
   {% endif %}
   <div class="container">
-    <nav>
-      {% if cars.has_other_pages %}
-        <ul class="pagination pagination-sm justify-content-center">
-          {% for i in cars.paginator.page_range %}
-            {% if cars.number == i %}
-              <li class="page-item active"><a class="page-link">{{ i }}</a></li>
-            {% else %}
-              <li class="page-item"><a class="page-link" href="?page={{ i }}">{{ i }}</a></li>
-            {% endif %}
-          {% endfor %}
-        </ul>
+    <ul class="pagination pagination-sm justify-content-center">
+      {% if page_obj.has_previous %}
+        <li class="page-item"><a href="?page=1" class="page-link">{% trans "First" %}</a></li>
+        <li class="page-item">
+          <a href="?page={{ page_obj.previous_page_number }}" class="page-link">{% trans "Previous" %}</a>
+        </li>
       {% endif %}
-    </nav>
+      <li class="page-link active">{{ page_obj.number }} of {{ page_obj.paginator.num_pages }}</li>
+      {% if page_obj.has_next %}
+        <li class="page-item">
+          <a href="?page={{ page_obj.next_page_number }}" class="page-link">{% trans "Next" %}</a>
+        </li>
+        <li class="page-item">
+          <a href="?page={{ page_obj.paginator.num_pages }}" class="page-link">{% trans "Last" %}</a>
+        </li>
+      {% endif %}
+    </ul>
   </div>
 {% endblock %}
